header title was collapsing into hero area and subnav when there wasnt an image - now we insert a spacer with 32px height and transparent background if there is no image - fixes #48

--- a/assets/sass/components/_body.scss
+++ b/assets/sass/components/_body.scss
@@ -100,6 +100,7 @@ html body {
 		margin-left:	auto;*/
 		position: relative;
 
+
 		.entry-header {
 			clear: both;
 			margin: 0;
@@ -168,6 +169,10 @@ html body {
 		#spacer {
 			height: 10px;
 			background-color: rgba(0, 0, 0, .30);
+		}
+		#hero #spacer {
+			height: 32px;
+			background: none;
 		}
 		#primary {
 			margin-top: 0;
